// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly for 1 expenses 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.55
  </p>
</div>
`;

exports[`Should render correctly for multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    5
     
    expenses
     totalling 
    $2,556.00
  </p>
</div>
`;
